src/test/resources/typeSystemTestModels/valid/constructors/ConstructorModifiersValid.java
package typeSystemTestModels.valid.constructors;

public class ConstructorModifiersValid {


  public ConstructorModifiersValid(){

  }

  private ConstructorModifiersValid(int n){

  }

  protected ConstructorModifiersValid(int m, int n){

  }


}
