src/test/resources/typeSystemTestModels/invalid/expressions/Util.java
package typeSystemTestModels.invalid.expressions;

public class Util {
  public static <K, V> boolean compare(K k, V v) {
    return true;
  }
}